Added header bar above nav bar, major upgrade! Starting to look like a website.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
       <div class="row">	
     	<div class="copyright">
 	  		&copy;2013 Paseo Caribbean<br>
-	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info.</a> designs
+	  		<a class="personal-logo" href="http://suminfo.herokuapp.com" target="_blank">Sum Info. designs</a> designs
 	  	</div>
 	  </div>	
       	 
