--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,6 +24,10 @@ body {
   width: 100%;
 }
 
+.header  {
+  background-color: #00A7D4;
+}
+
 .text-box{
   text-align: left;
   background-color:#ffffff;
@@ -85,7 +89,7 @@ img.icon{
     font-size: 120%;
     height: 100px; 
     position: relative;
-    box-shadow: 0px -1px 2px #660000;
+    box-shadow: 0px -1px 2px #0fe9f7;
         
 }
 
@@ -247,12 +251,11 @@ a.menu-link  {
   background-color: #FF7D7D; 
   background-image: none;
   font-size: 130%;
-  border-color: white;
   border-width: 7px;
   padding: 0 0 0px 0;
   border-bottom: solid;
   border-bottom-width: 1px;
-  border-bottom-color: #660000;
+  border-bottom-color: #0fe9f7;
 }
 
 .navbar {
