--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,8 +1,17 @@
+ 	
+
  	<ul class="connect-bar">
-    	<li><%=link_to image_tag("yelp75.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
+    	<li><%=link_to image_tag("yelp72.png", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
         </li>
-        <li><%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077"%> 
-		</li>        
+		<li><%=link_to image_tag("urbansqu72.png", class:"icon"), "http://www.urbanspoon.com/ch/1/68085/seattle/paseo", target:"_blank"%> </li>  
+		 <li><%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%> 
+		</li>  
+		<li>
+			<%=link_to image_tag("tripadvisor1.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
+        </li>
+		<li><a class="twitter-timeline" href="https://twitter.com/search?q=%23PaseoSeattle" data-widget-id="362708539870941184">Tweets about "#PaseoSeattle"</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</li>
     </ul> 
 
         
