--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,14 @@
-
+<div class="row header">
+  <div class="span12 header-info">
+    <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
+  </div>
+</div>
 <div class = "navbar navbar-static-top">
-	<div class = "navbar-inner">
-		<div class="container">
-			<!--btn-navbar used as toggle for collapsed navbar -->
+  <div class = "navbar-inner">
+    <div class="container">
+      <!--btn-navbar used as toggle for collapsed navbar -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-				<span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
@@ -16,8 +20,8 @@
           <li><%= link_to "Menu", menu_path, class:"menu-link" %></li>
           <li><%= link_to "Press", press_path, class:"menu-link" %></li>
           <li><%= link_to "Contact", contact_path, class:"menu-link"%></li>
-        </ul>	
+        </ul> 
       </div>
     </div> <!-- end of container-->
   </div>    
-</div>      
+</div>     
