changed twitter to smaller share button

--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -9,8 +9,8 @@
 		<li>
 			<%=link_to image_tag("tripadvisor1.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
         </li>
-		<li><a class="twitter-timeline" href="https://twitter.com/search?q=%23PaseoSeattle" data-widget-id="362708539870941184">Tweets about "#PaseoSeattle"</a>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://paseo.herokuapp.com" data-text="We want to hear your feedback and see your photos!" data-size="large" data-hashtags="PaseoSeattle">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</li>
     </ul> 
 
