--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,6 @@
 /* Universal */
 
 body {
-  
 /*pinkish #D68CA3*/
   background-color: #00A7D4;
   /*padding-top: 40px;*/
@@ -17,15 +16,18 @@ body {
 }
 
 #backdrop {
-  background: url(image_path('paseo12.jpg')) no-repeat center center fixed;
+  background-color:#007999;
+  /*background: url(image_path('paseo12.jpg')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  */
   width: 100%;
 }
+
 /*#00A7D4*/
 .header  {
-  background-color: #3E97D1;
+  background-color: #00A7D4;
 }
 
 .text-box{
@@ -85,7 +87,7 @@ img.icon{
 /*Footer*/
 
 .footer {
-    background-color: #3E97D1;
+    background-color: #00A7D4;
     font-size: 110%;
     height: 100px; 
     position: relative;
@@ -247,28 +249,43 @@ a.menu-link  {
     background-color:white;
 }     
 
+.navbar-container  {
+  background-color:#FF7D7D; 
+  margin-left: 0px; 
+  margin-right: 0px; 
+  width: 100% !important; 
+}
+
 .navbar-inner{
   background-color: #FF7D7D; 
   background-image: none;
-  font-size: 130%;
-  border-width: 7px;
-  padding: 0 0 0px 0;
-  border-bottom: solid;
+  font-size: 120%;
+  margin:0 auto 0px auto;
+  border-bottom: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-style: none;
   border-bottom-width: 1px;
   border-bottom-color: #0fe9f7;
+  border-color: #0fe9f7;
+  box-shadow: 0px 0px 0px !important;
+  border-radius: 0px;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+ 
 }
 
 .navbar {
   margin-bottom: 0px !important;
 }
 
+/*
 .navbar-static-top  {
   margin-left: 0px !important;  //Ensures navbar fits upon resize
   margin-right: 0px !important;
 }
-.navbar .nav {
-  float: right;
+*/
 
-}
+
 
 @import "bootstrap-responsive";
