--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,16 +1,28 @@
 
-	<div class="center">
-
- 	<a href="https://twitter.com/intent/tweet?button_hashtag=PaseoSeattle" class="twitter-hashtag-button" data-size="large" data-related="SumInformation" data-url="http://paseo.herokuapp.com">Tweet #PaseoSeattle</a>
+<div id="connect-bar">
+	<ul>
+ 		<li>
+ 			<a href="https://twitter.com/intent/tweet?button_hashtag=PaseoSeattle" class="twitter-hashtag-button" data-size="large" data-related="SumInformation" data-url="http://paseo.herokuapp.com">Tweet #PaseoSeattle</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-	</div>
+	</li>
+</div>
 	
 
-<div class="connect-bar center">
-	<%=link_to image_tag("yelp72.png", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>    
-	<%=link_to image_tag("urbansqu72.png", class:"icon"), "http://www.urbanspoon.com/ch/1/68085/seattle/paseo", target:"_blank"%> </li>  
-	<%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%> 
-	<%=link_to image_tag("tripadvisor73.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>   
+<div id="connect-bar">
+	<ul>
+		<li>
+		<%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%> 
+		</li>	
+		<li>
+			<%=link_to image_tag("yelp72.png", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
+		</li>	    
+		<li>
+			<%=link_to image_tag("urbansqu72.png", class:"icon"), "http://www.urbanspoon.com/ch/1/68085/seattle/paseo", target:"_blank"%> 
+		</li>  
+		<li>
+			<%=link_to image_tag("tripadvisor73.jpg", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>   
+		</li>
+	</ul>		
  </div>
 
         
