changed twitter to be below other icons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -296,6 +296,7 @@ a.menu-link  {
    width:100%;
    overflow:hidden;
    position:relative;
+   margin-top: 5px;
 }
 #connect-bar ul {
    clear:left;
