--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,7 +21,6 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  
   width: 100%;
 }
 
@@ -303,7 +302,7 @@ a.menu-link  {
    float:left;
    list-style:none;
    margin:0;
-   padding:0;
+   padding-right:55px;
    position:relative;
    left:50%;
    text-align:center;
