--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -291,38 +291,18 @@ a.menu-link  {
 */
 
 #connect-bar {
-   float:left;
-   width:100%;
-   overflow:hidden;
-   position:relative;
-   margin-top: 5px;
+float:left; 
+width:100%; 
+display: block; 
+text-align: center;
 }
-#connect-bar ul {
-   clear:left;
-   float:left;
-   list-style:none;
-   margin:0;
-   padding-right:55px;
-   position:relative;
-   left:50%;
-   text-align:center;
-}
-#connect-bar ul li {
-   display:block;
-   float:left;
-   list-style:none;
-   margin:0;
-   padding:0;
-   position:relative;
-   right:50%;
-}
-#connect-bar ul li a {
-   display:block;
-   margin:0 0 0 1px;
-   padding:3px 10px;
-   text-decoration:none;
-   line-height:1.3em;
-}
+
+#pager a {
+display:inline-block; 
+width:10px; 
+height:10px; 
+text-indent: -9999px; 
+ margin:0 2px;}
 
 
 
