--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -8,7 +8,7 @@
 
 	<%=link_to image_tag("tripadvisor73.jpg", class:"icon"), "http://www.tripadvisor.com/Restaurant_Review-g60878-d432138-Reviews-Paseo_Caribbean-Seattle_Washington.html", target:"_blank"%>   
  </div>
- <div id="connect-bar">
+ <div class="twitter" id="connect-bar">
  		<a href="https://twitter.com/intent/tweet?button_hashtag=PaseoSeattle" class="twitter-hashtag-button" data-size="large" data-related="SumInformation" data-url="http://paseo.herokuapp.com">Tweet #PaseoSeattle</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	
