--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -142,11 +142,12 @@
 			<div class="side">Scallops in Red Sauce - $6.25</div>
 			<div class="side">Fish in Red Sauce - $6.25</div>
   		<div class="side">Tofu in Red Sauce - $5.75</div>
-		  
-			<div class="menu-category span12 loners-sides">
+	</div> <!--end of span12 block-->	  
+		<div class="menu-category span12 loners-sides">
 			<span class="menu-title">Sides</span>
-			</div>
-		  	<div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
+		</div>
+		<div class="span12 block">
+		  	<div class="side menu-spacing-fix">6oz / 12oz black beans - $3.00 / 4.25</div>
 			<div class="side">6oz / 12oz Jasmine rice - $1.50 / 2.50</div>
 			<div class="side">6oz Caramelized Onions - $1.00</div>
 			<div class="side">Corn - $1.00</div>
