updates in size of fonts

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -152,7 +152,7 @@
 			<div class="side">6oz Caramelized Onions - $1.00</div>
 			<div class="side">Corn - $1.00</div>
 			<div class="side">Tortilla Chips - $1.25</div>	
-			<div class="side">Salsa (optional spice: 0-5 stars) - $0.95</div>
+			<div class="side">Salsa (spice: 0-5 stars) - $0.95</div>
 			<div class="side">Signature aoli - $0.95</div>
 			<div class="side">Habanero oil - $0.50</div>
 			<div class="side">Jalapenos - $0.50</div>	
