--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,7 +8,7 @@ body {
   /*padding-top: 40px;*/
   padding-left: 0px !important;
   padding-right: 0px !important;
-  font-size: 0.97em;
+  font-size: 15px;
 }
 
 .background-container {
@@ -148,7 +148,7 @@ div.copyright a  {
 }
 
 .description  {
-  font-size: 1.1em;
+  font-size: 1.0em;
   color: #660000;
 }
 
@@ -168,7 +168,7 @@ div.copyright a  {
 
 .side  {
   color: #660000;
-  font-size: 1.1em;
+  font-size: 1.0em;
   font-weight: bold;
   margin: 20px 0px 20px 0px;
 }
