--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, 'Menu') %>
-<h1 class="page-title">Menu</h1>
-
 <div class="row-fluid">
-	<div class="menu-category span12">
+	<div class="menu-category span12 top-page">
 		<span class="menu-title">Sandwiches</span><span class="description">
 	    <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
 	</div> 
