box shadow on header and footer to make color transition look more smooth

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,6 +30,10 @@ body {
   background-color: #fd8779;
 }
 
+.header-info  {
+  margin-bottom: 2px;
+}
+
 .text-box{
   text-align: left;
   background-color:#ffffff;
@@ -97,7 +101,7 @@ div.connect-bar a  {
     font-size: 110%;
     height: 100px; 
     position: relative;
-    box-shadow: 0px -1px 2px #660000;
+    box-shadow: 0px -1px 2px #fd9e92;
         
 }
 
@@ -242,13 +246,13 @@ a.menu-link  {
       text-shadow: none!important;
       font-weight: none;
       &:hover {
-         background-color: white !important;
-         opacity: .85;
+         background-color: #019d7f !important;
+         opacity: .9;
          color: #cc292c !important;
        }
       &:active {
         color: #cc292c !important;
-        background-color: white !important;
+        background-color: #019d7f !important;
       } 
      }
 
@@ -267,7 +271,8 @@ a.menu-link  {
   background-color:#01b693; 
   margin-left: 0px; 
   margin-right: 0px; 
-  width: 100% !important; 
+  width: 100% !important;
+  box-shadow: 0px -1px 2px #01cfa7; 
 }
 
 .navbar-inner{
@@ -281,7 +286,7 @@ a.menu-link  {
   border-top-style: none;
   border-bottom-width: 1px;
   border-bottom-color: #0fe9f7;
-  border-color: #0fe9f7;
+  border-color: #fd8779;
   box-shadow: 0px 0px 0px !important;
   border-radius: 0px;
   padding-left: 0px !important;
@@ -312,7 +317,7 @@ text-align: center;
  }
 
 .twitter{
-  margin-left:18px;  
+  margin-left:15px;  
   margin-top:5px;
 } 
 
