testing table menu on phone

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,130 +1,310 @@
 <% provide(:title, 'Menu') %>
-<div class="row-fluid">
-	<div class="menu-category span12 top-page">
-		<span class="menu-title">Sandwiches</span><span class="description">
+
+<div class="span12 text-box center" id="menu"> 
+	<div class="row-fluid">
+		<div class="menu-category span12">
+			<span class="menu-title">Sandwiches</span>
+			<span class="description">
 	    <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
-	</div> 
+		</div> 
 	<div class="span12 block">
-		<div class="menu-item">
-			<span class="num">1.</span><span class="fdname">Grilled Pork - $8.50</span><br>
-		  Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
-		  </div>
-		  <div class="menu-item">
-		  	<span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
-		 		<span class="alt-id"><em>Most Popular: Formerly known as the Midnight Cuban.</em></span><br>
-		 		Pork shoulder slow-roasted in Paseo Marinade until falling apart.
-			</div>
-			<div class="menu-item">
-				<span class="num">3.</span><span class="fdname">Chicken Breast - $8.50</span><br>
-      	Boneless, skinless chicken breast grilled on a flat top and basted with Paseo Marinade until golden brown.
-      </div>  
-      <div class="menu-item">
-      	<span class="num">4.</span><span class="fdname">Smokin' Thighs - $8.50</span><br>
-				Two marinated, de-boned, skin-on chicken thighs, flash grilled and oven roasted.
-			</div>
-			<div class="menu-item">
-				<span class="num">5.</span><span class="fdname">Sauteed Prawns - $8.95</span><br>
-				Tiger prawns saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-		  </div>
-			<div class="menu-item">
-				<span class="num">6.</span><span class="fdname">Fish of the Day - $8.95</span><br>
-	    	Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	  	</div>
-	  		
-		
-		
-			<div class="menu-item">
-				<span class="num">7.</span><span class="fdname">Tofu Delight - $8.50</span><br>
-	      Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>
-			<div class="menu-item">
-				<span class="num">8.</span><span class="fdname">Paseo Press - $8.95</span><br>
-	      <em class="alt-id">Formerly known as the Midnight Press.</em><br> Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
-	    </div>
-	    <div class="menu-item">
-	    	<span class="num">9.</span><span class="fdname">Ham and Cheese - $7.50</span><br>
-	      Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
-	    </div>   
-			<div class="menu-item">
-				<span class="num">10.</span><span class="fdname">Onion Obsession - $6.00</span><br>
-	      Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>
-			<div class="menu-item">
-				<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
-	      Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>  
-		
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">1.</td>
+    		<td class="fdname">Grilled Pork</td>
+    		<td class="price">$8.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Cubed pork loin grilled on a flat top and basted with  until golden brown.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">2.</td>
+    		<td class="fdname">Caribbean Roast</td>
+    		<td class="price">$8.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>		
+		 		<td class="menu-fix"><em class="alt-id food-description">Most Popular: Formerly known as the Midnight Cuban</em><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span></td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   			<tr>
+    			<td class="num">3.</td>
+    			<td class="fdname">Chicken Breast</td>
+    			<td class="price">$8.50</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Boneless, skinless chicken breast grilled on a flat top and basted with Paseo Marinade until golden brown.</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">4.</td>
+    			<td class="fdname">Smokin' Thighs</td>
+    			<td class="price">$8.50</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Two marinated, de-boned, skin-on chicken thighs, flash grilled and oven roasted.</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">5.</td>
+    			<td class="fdname">Sauteed Prawns</td>
+    			<td class="price">$8.95</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Tiger prawns saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">6.</td>
+    			<td class="fdname">Fish of the Day</td>
+    			<td class="price">$8.95</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">7.</td>
+    			<td class="fdname">Tofu Delight</td>
+    			<td class="price">$8.50</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">8.</td>
+    			<td class="fdname">Paseo Press</td>
+    			<td class="price">$8.95</td>
+   			</tr>
+   			<tr>
+   				<td></td>
+   				<td class="menu-fix"><em class="alt-id food-description">Formerly known as the Midnight Press.</em><span class="food-description">Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</span></td>	
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">9.</td>
+    			<td class="fdname">Ham and Cheese</td>
+    			<td class="price">$7.50</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">10.</td>
+    			<td class="fdname">Onion Obsession</td>
+    			<td class="price">$6.00</td>
+   			</tr>
+   			<tr>
+   				<td></td>	
+   				<td class="food-description">Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+  			</tr>
+			</table>
+			<table class="menu-item">
+   			<tr>
+    			<td class="num">11.</td>
+    			<td class="fdname">Seared Scallops</td>
+    			<td class="price">$8.95</td>
+   			</tr>
+   			<tr>	
+   				<td></td>
+   				<td class="food-description">Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
+  			</tr>
+		</table>
 	</div><!--end of span12 block-->	
 	<div class="menu-category span12">
-	<span class="menu-title">The Goods</span>
+		<span class="menu-title">The Goods</span>
 	</div>
 	<div class="span12 block">
-		
-			<div class="menu-item">
-				<span class="num">12.</span><span class="fdname">West Caribbean Bowl - $12.00</span><br>
-	      Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
-	   </div>
-		  <div class="menu-item">
-		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
-	      Two scoops of Jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
-		  </div>	
-		  <div class="menu-item">
-		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><sup class="gf-vg"> GF / VG</sup><br>
-	      Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br><span class="alt-id"><em>Add chicken, pork, or tofu - $3.00<br> Add prawns, scallops, or fish - $4.00</em></span>
-		  </div>
-		   
-		
-		  <div class="menu-item">	
-		  	<span class="num">15.</span><span class="fdname">Black Beans and Rice - $5.50</span><sup class="gf-vg"> GF / VG</sup><br>
-	      A bowl full of fluffy Jasmine rice smothered in our critically acclaimed vegetarian black beans.
-		  </div>  	
-		  <div class="menu-item">
-		  	<span class="num">16.</span><span class="fdname">Rice, Beans and Salad - $8.25</span><sup class="gf-vg"> GF / VG</sup><br>
-	      Two scoops of Jasmine rice, a cup of black beans and Paseo Greens.
-		  </div>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">12.</td>
+    		<td class="fdname">West Caribbean Bowl</td>
+    		<td class="price">$12.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh. Served with tortilla chips.<br>
+   			<em class="alt-id">Additional chicken thigh - $2.00</em></td>
+   		</tr>	
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">13.</td>
+    		<td class="fdname">Rice Bean Thigh Trio</td>
+    		<td class="price">$8.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Two scoops of Jasmine rice, a cup of black beans and a chicken thigh.<br>
+   			<em class="alt-id">Additional chicken thigh - $2.00</em></td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">14.</td>
+    		<td class="menu-fix"><span class="fdname">Paseo Greens</span><sup class="gf-vg"> GF / VG</sup></td>
+    		<td class="price">$4.75</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br>
+   			<span><em class="alt-id">Add chicken, pork, or tofu - $3.00</em></span><br>
+   			<span><em class="alt-id">Add prawns, scallops, or fish - $4.00</em>
+   			</td>
+   		</tr>	
+   	</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">15.</td>
+    		<td class="menu-fix"><span class="fdname">Black Beans and Rice</span><sup class="gf-vg"> GF / VG</sup></td>
+    		<td class="price">$5.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">A bowl full of fluffy Jasmine rice smothered in our critically acclaimed vegetarian black beans.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">16.</td>
+    		<td class="menu-fix"><span class="fdname">Rice, Beans and Salad</span><sup class="gf-vg"> GF / VG</sup></td>
+    		<td class="price">$8.25</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Two scoops of Jasmine rice, a cup of black beans and Paseo Greens.</td>
+  		</tr>
+		</table>
 	</div><!--end of span12 block-->		
 	<div class="menu-category span12">
 		<span class="menu-title">Entr&eacute;es</span>
 		<span class="description"><br><em>All entr&eacute;es are served with Jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
 	</div>
 	<div class="span12 block">
-		  <div class="menu-item">
-		  	<span class="num">17.</span><span class="fdname">Half Chicken Dinner - $12.50</span><br>
-				A huge half chicken oven roasted in Paseo Marinade.
-		  </div>
-		  <div class="menu-item">
-				<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner - $12.50</span><br>
-				<span class="alt-id"><em>Our entr&eacute;e form of the #2.</em></span><br>
-				Pork shoulder slow-roasted in Paseo Marinade until falling apart.
-		  </div>	
-		  <div class="menu-item">
-				<span class="num">19.</span><span class="fdname">Smokin' Thigh Dinner - $12.50</span><br>Two bone-in chicken thighs oven roasted in Paseo Marinade.
-		  </div>
-		  <div class="menu-item">
-				<span class="num">20.</span><span class="fdname">Chicken Breast Dinner - $13.00</span><br>A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.
-		  </div>	
-		  <div class="menu-item">
-		  	<span class="num">21.</span><span class="fdname">Pork Loin Dinner - $13.00</span><br>Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
-		  </div>
-		 
-		 
-		  <div class="menu-item">
-		  	<span class="num">22.</span><span class="fdname">Caribbean Scallops Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br> Wild scallops sautéed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  </div>	
-		  <div class="menu-item">
-				<span class="num">23.</span><span class="fdname">Paseo Fish Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
-				Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  </div>
-		  <div class="menu-item">
-				<span class="num">24.</span><span class="fdname">Paseo Prawn Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
-				Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  </div>	
-		  <div class="menu-item">
-				<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><sup class="gf-vg"> GF / VG</sup><br>
-				Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
-		  </div>
-
-		
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">17.</td>
+    		<td class="fdname">Half Chicken Dinner</td>
+    		<td class="price">$12.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">A huge half chicken oven roasted in Paseo Marinade.</td>
+  		</tr>
+		</table>	  
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">18.</td>
+    		<td class="fdname">Caribbean Roast Dinner</td>
+    		<td class="price">$12.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td><em class="alt-id food-description">Our entr&eacute;e form of the #2</em><span class="food-description"></span>
+   			</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">19.</td>
+    		<td class="fdname">Smokin' Thigh Dinner</td>
+    		<td class="price">$12.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Two bone-in chicken thighs oven roasted in Paseo Marinade.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">20.</td>
+    		<td class="fdname">Chicken Breast Dinner</td>
+    		<td class="price">$13.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">21.</td>
+    		<td class="fdname">Pork Loin Dinner</td>
+    		<td class="price">$13.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">22.</td>
+    		<td class="menu-fix"><span class="fdname">Caribbean Scallops Dinner</span><sup class="gf-vg">GF</sup></td>
+    		<td class="price">$13.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Wild scallops saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">23.</td>
+    		<td class="menu-fix"><span class="fdname">Paseo Fish Dinner</span><sup class="gf-vg">GF</sup>
+    		</td>
+    		<td class="price">$13.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">24.</td>
+    		<td class="menu-fix"><span class="fdname">Paseo Prawn Dinner</span><sup class="gf-vg">GF</sup></td>
+    		<td class="price">$13.00</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
+  		</tr>
+		</table>
+		<table class="menu-item">
+   		<tr>
+    		<td class="num">25.</td>
+    		<td class="menu-fix"><span class="fdname">Tofu Con Gusto</span><sup class="gf-vg">GF / VG</sup></td>
+    		<td class="price">$12.50</td>
+   		</tr>
+   		<tr>
+   			<td></td>
+   			<td class="food-description">Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
+  		</tr>
+		</table>
 	</div><!--end of span12-->	  	
 	<div class="menu-category span12 loners-sides">
 		<span class="menu-title">Loners</span>
@@ -166,7 +346,7 @@
 
 		
 </div>
-	
+</div>	
 	
 	
 	
