--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,13 +31,13 @@ body {
 }
 
 .header-info  {
-  margin-bottom: 2px;
+  margin-bottom: 0px;
 }
 
 .text-box{
   text-align: left;
   background-color:#ffffff;
-  padding: 20px 20px 10px 20px;
+  padding: 30px 10px 10px 10px;
   opacity:0.94; 
   /*
   border-left-style: solid;
@@ -51,14 +51,16 @@ body {
   margin-bottom: 20px !important;
 }
 
-#content  {
-  margin-top: 0px !important;
+#menu  {
+  margin-top: 2px !important;
 }
 
 .center {
   margin: 0 auto !important;
   float: none !important;
 }
+
+
 
 article{
   padding-bottom: 10px;
@@ -73,7 +75,7 @@ article{
   border-top: dotted;
   border-top-width: 1px;
   border-color: #16994b;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 /*Connect Bar*/
@@ -86,7 +88,7 @@ img.icon{
 }
 
 .connect-bar  {
- margin-bottom: 10px; 
+ margin-bottom: 20px; 
 }
 
 div.connect-bar a  {
@@ -152,6 +154,7 @@ div.copyright a  {
   margin-right: 5px;
 }
 
+
 .description  {
   font-size: 1.0em;
   color: #660000;
@@ -175,24 +178,46 @@ div.copyright a  {
   color: #660000;
   font-size: 1.0em;
   font-weight: bold;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0px 20px 5px;
+}
+
+/* Makes the price align to the left of the title with superscript*/
+.menu-fix  {
+  float:left;  
 }
 
 .fdname  {
+  float: left;
   font-size: 1.2em;
-  margin-left: 7px;
+  margin-left: 0px;
+  color: #660000;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.num  {
+  
+  font-size: 1.2em;
   color: #660000;
   font-weight: bold;
 }
 
-.num  {
+.price  {
+  float: left;
   font-size: 1.2em;
   color: #660000;
   font-weight: bold;
+  margin-left: 15px;
+}
+
+.food-description  {
+  float: left;
+  margin-left: 6px;
 }
 
 .gf-vg  {
   color: #660000;
+  margin-left: 2px;
 }
 
 .alt-id  {
@@ -202,10 +227,6 @@ div.copyright a  {
 
 .menu-spacing-fix  {
   margin-top: 20px;
-}
-
-.top-page  {
-  margin-top: 10px !important;
 }
 
 /* Typography */
@@ -272,7 +293,7 @@ a.menu-link  {
   margin-left: 0px; 
   margin-right: 0px; 
   width: 100% !important;
-  box-shadow: 0px -1px 2px #01cfa7; 
+  box-shadow: 0px -1px 2px #01cfa7, 0px 2px 2px #01cfa7; 
 }
 
 .navbar-inner{
