--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'News') %>
+	
+<div class="span12 text-box center" id="press"> 
 	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
@@ -59,8 +61,7 @@
       	Paseo came out on top, receiving the #1 ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
 	</article>		
-	
-
+</div>
 
 
 
