changed menu into table structure, added shadow to boxes, adjusted padding and integrated connect-section

--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,5 +1,5 @@
 
-<div id="connect-bar">
+<div class="connect-section" id="connect-bar">
 	<%=link_to image_tag("fbicon72.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%> 
 	
 	<%=link_to image_tag("yelp72.png", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
