--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,6 +1,4 @@
 <% provide(:title, 'Menu') %>
-
-<div class="span12 text-box center" id="menu"> 
 	<div class="row-fluid">
 		<div class="menu-category span12">
 			<span class="menu-title">Sandwiches</span>
@@ -16,7 +14,7 @@
    		</tr>
    		<tr>
    			<td></td>
-   			<td class="food-description">Cubed pork loin grilled on a flat top and basted with  until golden brown.</td>
+   			<td class="food-description">Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.</td>
   		</tr>
 		</table>
 		<table class="menu-item">
@@ -337,16 +335,17 @@
 			<div class="side">Can Soda or Water - $1.25</div>	
 	</div>
 	<div class="menu-category span12">
-		<span class="description">
+		<p id="legend">
+    <span class="description">
 		GF: Gluten-Free<br>
 		VG: Vegetarian<br>
 		</span>
 		<span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
+    </p>
 	</div>
 
 		
 </div>
-</div>	
 	
 	
 	
