--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,8 +37,9 @@ body {
 .text-box{
   text-align: left;
   background-color:#ffffff;
-  padding: 30px 10px 10px 10px;
-  opacity:0.94; 
+  padding: 30px 15px 20px 15px;
+  opacity:0.94;
+  box-shadow: 3px 0px 2px 0px #ffffff, -3px 0px 2px 0px #ffffff; 
   /*
   border-left-style: solid;
   border-right-style: solid;
@@ -47,20 +48,22 @@ body {
   */
 }
 
+.connect-section  {
+  margin-top: 10px;
+}
+
 .table  {
   margin-bottom: 20px !important;
 }
 
 #menu  {
-  margin-top: 2px !important;
+  margin-top: 0px !important;
 }
 
 .center {
   margin: 0 auto !important;
   float: none !important;
 }
-
-
 
 article{
   padding-bottom: 10px;
@@ -87,8 +90,13 @@ img.icon{
   }
 }
 
-.connect-bar  {
- margin-bottom: 20px; 
+#connect-page  {
+padding-bottom: 0px;  
+padding-top: 0px;
+}
+
+#connect-bar  {
+ margin-bottom: 0px; 
 }
 
 div.connect-bar a  {
@@ -220,6 +228,10 @@ div.copyright a  {
   margin-left: 2px;
 }
 
+#legend  {
+  text-align: center;
+}
+
 .alt-id  {
   color: #660000;
   font-size: .9em;
@@ -338,7 +350,7 @@ text-align: center;
  }
 
 .twitter{
-  margin-left:15px;  
+  margin-left:0px;  
   margin-top:5px;
 } 
 
